test/valid/tcomp000_constants/constants.mag
-- Author: tcomp000, Vasco T. Vasconcelos

const maxSpeed : Int = 120
const fever : Int = 37 + 5

fun main (_) : Unit -> Unit = print(maxSpeed * fever)
