test/invalid-semantics/tcomp000_unresolved_symbol/unresolved_symbol.mag
-- Author: tcomp000, Vasco T. Vasconcelos

fun main (_) : Unit -> Unit = undeclaredVariable
